// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CreditList Component > CreditItem > displays subtitle use known_for_department when character in null 1`] = `
<div>
  <div
    class="flex flex-row items-center gap-2"
  >
    <img
      class="size-12 sm:size-14 lg:size-16 object-cover rounded-lg"
      src="https://media.themoviedb.org/t/p/w276_and_h350_face//pFtHhih2XEaFaD3qOFyQW6q83br.jpg"
    />
    <div
      class="flex flex-col gap-1"
    >
      <div
        class="text-xs sm:text-sm lg:text-base font-bold"
      >
        Aaron Taylor-Johnson
      </div>
      <div
        class="text-xs sm:text-sm lg:text-base font-thin"
      >
        Acting
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditList Component > CreditItem > displays the UserIcon when profile_path in null 1`] = `
<div>
  <div
    class="flex flex-row items-center gap-2"
  >
    <div
      class="bg-slate-400 rounded-lg"
    >
      <svg
        aria-hidden="true"
        class="size-12 sm:size-14 lg:size-16"
        data-slot="icon"
        data-testid="user-profile"
        fill="currentColor"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"
        />
      </svg>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <div
        class="text-xs sm:text-sm lg:text-base font-bold"
      >
        Aaron Taylor-Johnson
      </div>
      <div
        class="text-xs sm:text-sm lg:text-base font-thin"
      >
        Sergei Kravinoff / Kraven the Hunter
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditList Component > CreditItem > renders correctly 1`] = `
<div>
  <div
    class="flex flex-row items-center gap-2"
  >
    <img
      class="size-12 sm:size-14 lg:size-16 object-cover rounded-lg"
      src="https://media.themoviedb.org/t/p/w276_and_h350_face//pFtHhih2XEaFaD3qOFyQW6q83br.jpg"
    />
    <div
      class="flex flex-col gap-1"
    >
      <div
        class="text-xs sm:text-sm lg:text-base font-bold"
      >
        Aaron Taylor-Johnson
      </div>
      <div
        class="text-xs sm:text-sm lg:text-base font-thin"
      >
        Sergei Kravinoff / Kraven the Hunter
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditList Component > renders ListNoData correctly 1`] = `
<div>
  <div
    class="flex flex-row justify-center items-center rounded-lg bg-black bg-opacity-50 p-8 text-gray-300"
  >
    <svg
      aria-hidden="true"
      class="size-8 mr-2"
      data-slot="icon"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    Data Not Found
  </div>
</div>
`;
